14 Oct, 2018
add: lighter template WIP - will need to rethink AJAX Chat templates
rewrite: breadcrumbs, WIP
replace: get all users with ajax user lookup send_message.php
replace: markItUp.js with SCEditor.js WYSIWYG Editor
remove: jquery.mousewheel.js
move: jquery.flexslider.js to npm
move: tooltipster.js to npm
remove .htaccess files as nginx ignores them
add: new base template
move: themeChanger into template folder to allow modification per template
replace: FormManager.js with genres_show_hide.js
replace: jquery.validator.js with html5 validation
fix: Adminer link in navbar
remove: ipToStorageFormat function

11 Oct, 2018
fix: site_settings.php

10 Oct, 2018
fix: announce.php

02 Sept, 2018
update: database files
remove: image proxy key
update: remove leading dots in cookie_domain example
add: tag @username anywhere
update: add columns year, rating updated from api calls
update: api calls to ajax requests for faster initial page load details.php
update: merge tvmaze title info with episode info
remove: ssluse, determine by site scheme instead

28 Aug, 2018
update: full stop when files.php is missing

27 Aug, 2018
update: add notice if missing files.php

26 Aug, 2018
update: placeholder_image() allow variable size
update: move imdb info to top of page details.php
update: use minimal bulma, only as needed
refactor: navbar.php
add: node-sass to compile sass files

24 Aug, 2018
fix: redecalare function validip() ann_functions.php
fix: using var before set
fix: get correct class from similar staffpanel names
update: insert/select user ip correctly
remove: check_selected.js
fix: check if var is empty before using it watched_users.php
fix: typo forums.php
update: limit displayed users count active_24h_users.php

23 Aug, 2018
add: missing flip_box.js uglify.php
fix: typo stelth
fix: delete user inactive.php
fix: display freeleech.php block
fix: set/unset bonus edit_moods.php
fix: check if var is empty before using it torrenttable_functions.php