@@ -57,11 +57,11 @@ if (isset($_POST['button']) && $_POST['button'] === 'Post') {
         'body' => $body,
         'icon' => $icon,
         'post_title' => $post_title,
-        'bbcode' => $bbcode,
+        'bbcode' => $bb_code,
         'ip' => inet_pton($ip),
         'anonymous' => $anonymous,
     ];
-    $post_id = $post_stuffs->values($values);
+    $post_id = $post_stuffs->insert($values);
     clr_forums_cache($arr['real_forum_id']);
     $cache->delete('forum_posts_' . $CURUSER['id']);
     sql_query('UPDATE topics SET last_post = ' . sqlesc($post_id) . ', post_count = post_count + 1 WHERE id=' . sqlesc($topic_id)) or sqlerr(__FILE__, __LINE__);
