@@ -1,3 +1,9 @@
+18 Oct, 2038
+fix: iterate only numeric template folders uglify.php
+fix: call image_proxy with width/height when bbcode image tag includes width/height
+fix: db insert Post.php
+update: missing tags from breadcrumbs
+
 14 Oct, 2018
 add: lighter template WIP - will need to rethink AJAX Chat templates
 rewrite: breadcrumbs, WIP
